syntax = "proto3";

package evm.uniswap.v2;

message Events { repeated Transaction transactions = 1; }

message Transaction {
  bytes hash = 1;
  bytes from = 2;
  optional bytes to = 3;
  uint64 nonce = 5;
  string gas_price = 6; // uint256
  uint64 gas_limit = 7;
  uint64 gas_used = 8;
  string value = 9; // uint256
  repeated Log logs = 10;
}

// https://github.com/Uniswap/v2-core/blob/master/contracts/UniswapV2Pair.sol
// https://github.com/Uniswap/v2-core/blob/master/contracts/UniswapV2Factory.sol
message Log {
  bytes address = 1;
  uint64 ordinal = 2;
  repeated bytes topics = 3;
  bytes data = 4;
  oneof log {
    // UniswapV2Pair
    Swap swap = 10;
    Sync sync = 11;
    Mint mint = 12;
    Burn burn = 13;

    // UniswapV2Factory
    PairCreated pair_created = 14;
  }
}

message PairCreated {
  bytes token0 = 1;
  bytes token1 = 2;
  bytes pair = 3;
  uint64 all_pairs_length = 4; // total number of pairs created
}

message Sync {
  string reserve0 = 1; // uint112
  string reserve1 = 2; // uint112
}

message Swap {
  bytes sender = 1;
  string amount0_in = 2; // uint256
  string amount0_out = 3; // uint256
  string amount1_in = 4; // uint256
  string amount1_out = 5; // uint256
  bytes to = 6; // address
}

message Mint {
  bytes sender = 1; // address
  string amount0 = 2; // uint256
  string amount1 = 3; // uint256
}

message Burn {
  bytes sender = 1; // address
  string amount0 = 2; // uint256
  string amount1 = 3; // uint256
  bytes to = 4; // address
}